--- a/client/src/index.css
+++ b/client/src/index.css
@@ -678,13 +678,19 @@ body {
 }
 
 .edit-image-preview {
-  position: relative;
-  width: 100%;
   display: flex;
   justify-content: center;
+  width: 100%;
+}
+
+.edit-image-preview-inner {
+  position: relative;
+  display: inline-block;
+  max-width: 100%;
 }
 
 .edit-image-preview img {
+  display: block;
   max-width: 100%;
   height: auto;
   border-radius: var(--radius-md);
